Zine adjusts single/double. Zineapp resizes better. Tabs fix height (at the cost of collapsable)

--- a/container/static/container/css/jquery.ui.container.css
+++ b/container/static/container/css/jquery.ui.container.css
@@ -1,7 +1,7 @@
 /* Custom Styling (SJB)
 ----------------------------------*/
 .ui-tabs{
-    height: 250px;
+    max-height: 500px;
     width: 100%;
 }
 .ui-tabs-panel{
