--- a/zineapp/static/zineapp/css/zine.css
+++ b/zineapp/static/zineapp/css/zine.css
@@ -1,14 +1,13 @@
-.sample-sam-test #book-wrapper{
-	width:922px;
-	margin:0 39px;
-}
-
 .sam-test{
 	width:922px;
 	height:600px;
 	z-index:0;
 	-webkit-transition:margin-left 0.2s ease-in-out;
 	transition:margin-left 0.2s ease-in-out;
+}
+/* OVERRIDE IF SMALL */
+html.small .sam-test{
+	width: 461px;
 }
 
 .sam-test .page{
